--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "backend-dev": "python -m venv backend_env && source backend_env/bin/activate && pip install -r requirements.txt && python -m flask run --port=5000 --reload --debug",
+    "backend-dev": "python -m venv backend_env && source backend_env/bin/activate && pip install -r requirements.txt && python -m flask --app=api/index.py run  --port=5000 --reload --debug",
     "dev": "concurrently \"vite\" \"npm run backend-dev\"",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
