--- a/app/package.json
+++ b/app/package.json
@@ -21,7 +21,9 @@
     "html-react-parser": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.6.2",
+    "rehype-raw": "^7.0.0",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
